--- a/app.json
+++ b/app.json
@@ -1,26 +1,33 @@
 {
-  "pages":[
-    "pages/index/index",
-    "pages/logs/logs"
-  ],
-  "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "小程序demo",
-    "navigationBarTextStyle":"black"
-  },
-  "tabBar": {
-      "list":[{
-          "pagePath": "pages/index/index",
-          "text": "home"
-      },{
-          "pagePath": "pages/logs/logs",
-          "text": "logs"
-      }]
-  },
-  "networkTimeout": {
-      "request": 10000,
-      "downloadFile": 10000
-  },
-  "debugger": true
+    "pages": [
+        "pages/index/index",
+        "pages/logs/logs"
+    ],
+    "window": {
+        "backgroundTextStyle": "light",
+        "navigationBarBackgroundColor": "#fff",
+        "navigationBarTitleText": "小程序demo",
+        "navigationBarTextStyle": "black"
+    },
+    "tabBar": {
+        "list": [
+            {
+                "pagePath": "pages/index/index",
+                "iconPath": "image/icon_component.png",
+                "selectedIconPath": "image/icon_component_HL.png",
+                "text": "组件"
+            },
+            {
+                "pagePath": "pages/logs/logs",
+                "iconPath": "image/icon_API.png",
+                "selectedIconPath": "image/icon_API_HL.png",
+                "text": "接口"
+            }
+        ]
+    },
+    "networkTimeout": {
+        "request": 10000,
+        "downloadFile": 10000
+    },
+    "debugger": true
 }
